--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -44,8 +44,25 @@ jobs:
     - name: Build Firmware
       env:
         TNAME: NEWIFI3
+        user_name: admin                       # 用户名
+        user_password: xiangyang               # 用户密码
+        lan_ip: 192.168.1                      # lan 地址 192.168.1.1 一定别写后面的 .1
+        wifi_password: 1234567890              # wifi密码，切记密码最少8位
+        version_time: $(date "+%Y%m%d")        # 自动时间更新时版本号: 20200320
+        default_path: ./user/shared/defaults.h   #默认文件配置目录
       run: |
         cd /opt/rt-n56u/trunk
+        echo '修改用户名'
+        sed -i 's/#define\s*SYS_USER_ROOT\s*"admin"/#define  SYS_USER_ROOT     "'$user_name'"/g' $default_path
+        echo '修改密码'
+        sed -i 's/#define\s*DEF_ROOT_PASSWORD\s*"admin"/#define  DEF_ROOT_PASSWORD     "'$user_password'"/g' $default_path
+        echo "修改Lan ip"
+        sed -i "s/192.168.2/$lan_ip/g" $default_path
+        echo "修改Wif密码"
+        sed -i "s/1234567890/$wifi_password/g" $default_path
+        echo "更新版本号时间"
+        sed -i "s/FIRMWARE_BUILDS_REV=[0-9]*/FIRMWARE_BUILDS_REV=$version_time/g" ./versions.inc
+        #修改templates
         if [ ! -f configs/templates/$TNAME.config ] ; then
         echo "configs/templates/$TNAME.config not found "
         exit 1
