--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -129,6 +129,7 @@ jobs:
         #echo "trunk/user/shadowsocks" >> .git/info/sparse-checkout
         git pull --force --depth 1 origin master
         
+        cd /opt/rt-n56u/trunk
         sudo ./clear_tree
         sudo ./build_firmware_modify $TNAME 0
         sudo mv -f images/*.trx /opt/images/
