--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -32,8 +32,8 @@ jobs:
         pkg-config zlib1g-dev libgmp3-dev libmpc-dev libmpfr-dev libncurses5-dev libltdl-dev wget
     - name: Clone source code
       run: |
-        git clone --depth=1 https://github.com/leafsay/rt-n56u.git /opt/rt-n56u
-        #git clone --depth=1 https://github.com/hanwckf/rt-n56u.git /opt/rt-n56u
+        #git clone --depth=1 https://github.com/leafsay/rt-n56u.git /opt/rt-n56u
+        git clone --depth=1 https://github.com/hanwckf/rt-n56u.git /opt/rt-n56u
         cd /opt/rt-n56u/toolchain-mipsel
         sh dl_toolchain.sh
         mkdir -p /opt/images/
@@ -75,99 +75,99 @@ jobs:
         echo "configs/templates/$TNAME.config not found "
         exit 1
         fi
-        cp -f configs/templates/$TNAME.config .config
+        #cp -f configs/templates/$TNAME.config .config
         sed -i 's/CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=n/CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y/g' .config
         ################################################################################################
         #因不同型号配置功能不一样，所以先把配置项删除，如果你自己要添加其他的，也要写上删除这一条，切记！！！
         ################################################################################################
-        sed -i '/CONFIG_FIRMWARE_ENABLE_USB/d' .config
-        sed -i '/CONFIG_FIRMWARE_ENABLE_UFSD/d' .config
-        sed -i '/CONFIG_FIRMWARE_ENABLE_FAT/d' .config
-        sed -i '/CONFIG_FIRMWARE_ENABLE_EXFAT/d' .config
-        sed -i '/CONFIG_FIRMWARE_ENABLE_EXT2/d' .config
-        sed -i '/CONFIG_FIRMWARE_ENABLE_EXT3/d' .config
-        sed -i '/CONFIG_FIRMWARE_ENABLE_EXT4/d' .config
-        sed -i '/CONFIG_FIRMWARE_ENABLE_XFS/d' .config
-        sed -i '/CONFIG_FIRMWARE_ENABLE_FUSE/d' .config
-        sed -i '/CONFIG_FIRMWARE_ENABLE_SWAP/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_UVC/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_HID/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_SERIAL/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_AUDIO/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_XFRM/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_QOS/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_IMQ/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_IFB/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_IPSET/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_NFSD/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_NFSC/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_CIFS/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_NTFS_3G/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_LPRD/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_U2EC/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_TCPDUMP/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_HDPARM/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_PARTED/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_SMBD/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_SMBD36/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_WINS/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_FTPD/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_RPL2TP/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_EAP_PEAP/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_DDNS_SSL/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_HTTPS/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_SFTP/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_DROPBEAR/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_OPENSSH/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_OPENVPN/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_SSWAN/d' .config
-        #sed -i '/CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC/d' .config
-        #sed -i '/CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_XUPNPD/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_MINIDLNA/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_FIREFLY/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_TRANSMISSION/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_ARIA/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_CURL/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_SCUTCLIENT/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_GDUT_DRCOM/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_DOGCOM/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_MINIEAP/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_NJIT_CLIENT/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_NAPT66/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_SSSERVER/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_SERVER/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CLIENT/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CMD/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_DNSFORWARDER/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_VLMCSD/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_TTYD/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_LRZSZ/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_HTOP/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_NANO/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_IPERF3/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_DUMP1090/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_RTL_SDR/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_MTR/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_SOCAT/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_SRELAY/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_MENTOHUST/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_FRPC/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_FRPS/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_TUNSAFE/d' .config
-        sed -i '/CONFIG_FIRMWARE_INCLUDE_WIREGUARD/d' .config
-        sed -i 's/CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=n/CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y/g' .config
+        sed -i '/CONFIG_FIRMWARE_ENABLE_USB/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_ENABLE_UFSD/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_ENABLE_FAT/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_ENABLE_EXFAT/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_ENABLE_EXT2/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_ENABLE_EXT3/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_ENABLE_EXT4/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_ENABLE_XFS/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_ENABLE_FUSE/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_ENABLE_SWAP/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_UVC/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_HID/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SERIAL/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_AUDIO/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_XFRM/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_QOS/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_IMQ/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_IFB/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_IPSET/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_NFSD/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_NFSC/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_CIFS/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_NTFS_3G/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_LPRD/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_U2EC/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_TCPDUMP/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_HDPARM/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_PARTED/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SMBD/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SMBD36/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_WINS/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_FTPD/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_RPL2TP/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_EAP_PEAP/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_DDNS_SSL/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_HTTPS/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SFTP/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_DROPBEAR/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_OPENSSH/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_OPENVPN/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SSWAN/d' configs/templates/$TNAME.config
+        #sed -i '/CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC/d' configs/templates/$TNAME.config
+        #sed -i '/CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_XUPNPD/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_MINIDLNA/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_FIREFLY/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_TRANSMISSION/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_ARIA/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_CURL/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SCUTCLIENT/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_GDUT_DRCOM/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_DOGCOM/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_MINIEAP/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_NJIT_CLIENT/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_NAPT66/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SSSERVER/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_SERVER/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CLIENT/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CMD/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_DNSFORWARDER/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_VLMCSD/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_TTYD/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_LRZSZ/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_HTOP/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_NANO/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_IPERF3/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_DUMP1090/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_RTL_SDR/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_MTR/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SOCAT/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SRELAY/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_MENTOHUST/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_FRPC/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_FRPS/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_TUNSAFE/d' configs/templates/$TNAME.config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_WIREGUARD/d' configs/templates/$TNAME.config
+        sed -i 's/CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=n/CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y/g' configs/templates/$TNAME.config
         ######################################################################
         #以下选项是定义你需要的功能（y=集成,n=忽略），重新写入到.config文件
         ######################################################################
-        echo "CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=y" >> .config #SS plus+
-        echo "CONFIG_FIRMWARE_INCLUDE_VLMCSD=y" >> .config #kms
+        echo "CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=y" >> configs/templates/$TNAME.config #SS plus+
+        echo "CONFIG_FIRMWARE_INCLUDE_VLMCSD=y" >> configs/templates/$TNAME.config #kms
         #########################################################################################
         #自定义添加其它功能请参考源码configs/templates/目录下的config文件。按照上面的格式添加即可
         #格式如下：
@@ -184,7 +184,8 @@ jobs:
         
         cd /opt/rt-n56u/trunk
         sudo ./clear_tree
-        sudo ./build_firmware_modify $TNAME 0
+        #sudo ./build_firmware_modify $TNAME 0
+        sudo ./build_firmware_modify $TNAME
         sudo mv -f images/*.trx /opt/images/
     - name : Upload packages
       uses: actions/upload-artifact@master
