--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -174,6 +174,7 @@ jobs:
         #sed -i '/自定义项/d' .config
         #echo "自定义项=y" >> .config
         #########################################################################################
+        cp -f configs/templates/$TNAME.config .config
         cd user
         git init #初始化
         git remote add origin https://github.com/leafsay/rt-n56u.git # 增加远端的仓库地址
